--- a/latex/icml2018.sty
+++ b/latex/icml2018.sty
@@ -550,7 +550,7 @@ Correspondence to: \icmlcorrespondingauthor@text.
 }
 
 % modification to natbib citations
-\setcitestyle{authoryear,round,citesep={;},aysep={,},yysep={;}}
+%\setcitestyle{authoryear,round,citesep={;},aysep={,},yysep={;}}
 
 % Redefinition of the abstract environment. 
 \renewenvironment{abstract}
