--- a/latex/example_paper.bib
+++ b/latex/example_paper.bib
@@ -1,75 +1,70 @@
-@inproceedings{langley00,
- author    = {P. Langley},
- title     = {Crafting Papers on Machine Learning},
- year      = {2000},
- pages     = {1207--1216},
- editor    = {Pat Langley},
- booktitle     = {Proceedings of the 17th International Conference
-              on Machine Learning (ICML 2000)},
- address   = {Stanford, CA},
- publisher = {Morgan Kaufmann}
+@inproceedings{goodfellow2014generative,
+  title={Generative adversarial nets},
+  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2672--2680},
+  year={2014}
 }
 
-@TechReport{mitchell80,
-  author = 	 "T. M. Mitchell",
-  title = 	 "The Need for Biases in Learning Generalizations",
-  institution =  "Computer Science Department, Rutgers University",
-  year = 	 "1980",
-  address =	 "New Brunswick, MA",
+@article{dumoulin2016adversarially,
+  title={Adversarially learned inference},
+  author={Dumoulin, Vincent and Belghazi, Ishmael and Poole, Ben and Lamb, Alex and Arjovsky, Martin and Mastropietro, Olivier and Courville, Aaron},
+  journal={International Conference on Learning Representations},
+  year={2017}
 }
 
-@phdthesis{kearns89,
-  author = {M. J. Kearns},
-  title =  {Computational Complexity of Machine Learning},
-  school = {Department of Computer Science, Harvard University},
-  year =   {1989}
+@article{pan2010survey,
+  title={A survey on transfer learning},
+  author={Pan, Sinno Jialin and Yang, Qiang},
+  journal={IEEE Transactions on knowledge and data engineering},
+  volume={22},
+  number={10},
+  pages={1345--1359},
+  year={2010},
+  publisher={IEEE}
 }
 
-@Book{MachineLearningI,
-  editor = 	 "R. S. Michalski and J. G. Carbonell and T.
-		  M. Mitchell",
-  title = 	 "Machine Learning: An Artificial Intelligence
-		  Approach, Vol. I",
-  publisher = 	 "Tioga",
-  year = 	 "1983",
-  address =	 "Palo Alto, CA"
+@article{jing2017neural,
+  title={Neural style transfer: A review},
+  author={Jing, Yongcheng and Yang, Yezhou and Feng, Zunlei and Ye, Jingwen and Song, Mingli},
+  journal={arXiv preprint arXiv:1705.04058},
+  year={2017}
 }
 
-@Book{DudaHart2nd,
-  author =       "R. O. Duda and P. E. Hart and D. G. Stork",
-  title =        "Pattern Classification",
-  publisher =    "John Wiley and Sons",
-  edition =      "2nd",
-  year =         "2000"
+@article{donahue2016adversarial,
+  title={Adversarial feature learning},
+  author={Donahue, Jeff and Kr{\"a}henb{\"u}hl, Philipp and Darrell, Trevor},
+  journal={International Conference on Learning Representations2},
+  year={2017}
 }
 
-@misc{anonymous,
-  title= {Suppressed for Anonymity},
-  author= {Author, N. N.},
-  year= {2018}
+@article{arora2017theoretical,
+  title={Theoretical limitations of Encoder-Decoder GAN architectures},
+  author={Arora, Sanjeev and Risteski, Andrej and Zhang, Yi},
+  journal={arXiv preprint arXiv:1711.02651},
+  year={2017}
 }
 
-@InCollection{Newell81,
-  author =       "A. Newell and P. S. Rosenbloom",
-  title =        "Mechanisms of Skill Acquisition and the Law of
-                  Practice", 
-  booktitle =    "Cognitive Skills and Their Acquisition",
-  pages =        "1--51",
-  publisher =    "Lawrence Erlbaum Associates, Inc.",
-  year =         "1981",
-  editor =       "J. R. Anderson",
-  chapter =      "1",
-  address =      "Hillsdale, NJ"
+@inproceedings{tzeng2017adversarial,
+  title={Adversarial discriminative domain adaptation},
+  author={Tzeng, Eric and Hoffman, Judy and Saenko, Kate and Darrell, Trevor},
+  booktitle={Computer Vision and Pattern Recognition (CVPR)},
+  volume={1},
+  pages={4},
+  year={2017}
 }
 
+@article{arjovsky2017wasserstein,
+  title={Wasserstein gan},
+  author={Arjovsky, Martin and Chintala, Soumith and Bottou, L{\'e}on},
+  journal={arXiv preprint arXiv:1701.07875},
+  year={2017}
+}
 
-@Article{Samuel59,
-  author = 	 "A. L. Samuel",
-  title = 	 "Some Studies in Machine Learning Using the Game of
-		  Checkers",
-  journal =	 "IBM Journal of Research and Development",
-  year =	 "1959",
-  volume =	 "3",
-  number =	 "3",
-  pages =	 "211--229"
+@inproceedings{gan2017triangle,
+  title={Triangle generative adversarial networks},
+  author={Gan, Zhe and Chen, Liqun and Wang, Weiyao and Pu, Yuchen and Zhang, Yizhe and Liu, Hao and Li, Chunyuan and Carin, Lawrence},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={5253--5262},
+  year={2017}
 }
